--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.2.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "select2": "^4.0.6-rc.1",
     "uikit": "^3.0.0-rc.26"
   },
   "devDependencies": {
